fix: update label styles for improved readability and consistency across components

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -180,4 +180,11 @@
     line-height: 130%;
     cursor: pointer;
   }
+
+  label {
+    color: var(--color-gray-200);
+    font-size: 0.85rem;
+    margin-bottom: 0.25rem;
+
+  }
 }
